--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <label for="spaces">Include Spaces</label>
                 </li>
                 <li class="option">
-                    <label for="length">Length:</label>
+                    <label for="length">Length(4-64):</label>
                     <input type="number" id="length" min="4" max="64" value="12" style="width: 60px; margin-left: 10px;">
                 </li>
             </ul>
