--- a/index.html
+++ b/index.html
@@ -52,5 +52,10 @@
         <button class="generate-btn" id="generate" onclick="generatePassword()">Generate Password</button>
         </div>
     </div>
+        <footer>
+            &copy; 2025 <span>Chiranjeevi</span>
+            <span> | </span>
+            <span>All rights reserved.</span>
+        </footer>
 </body>
 </html>
